--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ h2 {
     font-family: Yeseva One;
     font-size: 26px;
     text-align: center;
+    color: rgba(87, 76, 134, 1);
 }
 
 p {
@@ -100,7 +101,7 @@ h1 {
 .slick-slide {
 	transform: scale(0.8);
 	transition: all 0.4s ease-in-out;
-	padding: 40px 0;
+	padding: 30px 0;
 }
 
 
@@ -116,13 +117,13 @@ h1 {
 }
 
 .slick-prev:before {
-    color: rgb(115, 82, 145) !important;
+    color: rgb(149, 107, 195) !important;
     background-color: #ffffff;
   
   }
 
 .slick-next:before {
-    color: rgb(107, 85, 130) !important;
+    color: rgb(149, 107, 195) !important;
     background-color: #ffffff;
   }
 
@@ -145,6 +146,27 @@ figcaption a:hover {
 /* footer */
 
 footer {
-    background-color: rgb(90, 60, 118);
+    background-color: rgba(87, 76, 134, 1);
     padding: 2rem;
+}
+
+.footer-ul {
+    margin-top: -0.75rem;
+    margin-left: -2.5rem;
+    list-style: none;
+}
+
+.footer-li a {
+    color: #ffffff;
+    text-decoration: none;
+    font-family: Roboto;
+}
+
+.footer-li a:hover {
+    color: rgb(189, 104, 231);
+}
+
+h3 {
+    color: #ffffff;
+    font-family: Roboto;
 }
