--- a/css/main.css
+++ b/css/main.css
@@ -82,13 +82,10 @@ h1 {
 
 .welcome {
     background-color: rgba(114, 100, 176, 0.199);
-    //box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    
 }
 
 .flex {
     display: flex;
-    justify-content: space-between;
 }
 
 /* slick */
@@ -151,13 +148,48 @@ figcaption a:hover {
 }
 
 .card {
-    background-color: #ccc;
+    background-color: white;
     padding: 20px;
-    text-align: center;
+    border-radius: 5px;
+    margin-bottom: 2rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .card img {
     max-width: 100%;
+    border-radius: 5px;
+}
+
+button {
+    margin-left: 1rem;
+    margin-top: 1rem;
+    height: 2.5rem;
+    width: 6rem;
+    background-color: rgb(36, 153, 237);
+    border-radius: 3px;
+    border: transparent;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+    background-color: rgb(28, 119, 184);
+}
+
+button a {
+    text-decoration: none;
+    color: white;
+}
+
+.card p {
+    width: 300px;
+} 
+
+.card .flex {
+    margin-top: -1.5rem;
+}
+
+h3 {
+    font-family: Roboto;
 }
 
 /* footer */
