--- a/css/main.css
+++ b/css/main.css
@@ -34,9 +34,7 @@ header {
     font-size: 16px;
     display: inline;
     padding-left: 1rem;
-}
-
-.header-li a {
+    padding-right: 1rem;
     text-decoration: none;
 }
 
@@ -45,11 +43,43 @@ header {
     margin: 0;
 }
 
-.header-nav, h1 {
-    text-align: center;
+.header-nav {
+    display: flex;
+    justify-content: center;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: #ffffff;
+    border-radius: 3px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+    font-family: Roboto;
+    padding: 0.87rem;
+    text-align: left;
+}
+
+.dropdown-menu a {
+    text-decoration: none;
+    color: rgb(97, 68, 125);
+    display: block;
+}
+
+.dropdown-menu a:not(:last-child) {
+    margin-bottom: 0.75rem;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
+
+.dropdown-menu a:hover {
+    font-weight: 500;
+    color: rgb(197, 134, 255);
 }
 
 h1 {
+    text-align: center;
     font-family: Yeseva One;
     font-size: 40px;
     color: rgb(54, 54, 54);
@@ -133,7 +163,7 @@ figcaption a {
     color: rgb(97, 68, 125);
     text-decoration: none;
     font-family: Roboto;
-    font-size: 15px;
+    font-size: 14px;
 }
 
 figcaption a:hover {
@@ -160,9 +190,9 @@ figcaption a:hover {
     border-radius: 5px;
 }
 
-button {
+.view-btn {
     margin-left: 1rem;
-    margin-top: 1rem;
+    margin-top: 2.5rem;
     height: 2.5rem;
     width: 6rem;
     background-color: rgb(36, 153, 237);
@@ -171,11 +201,11 @@ button {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-button:hover {
+.view-btn:hover {
     background-color: rgb(28, 119, 184);
 }
 
-button a {
+.view-btn a {
     text-decoration: none;
     color: white;
 }
@@ -190,6 +220,67 @@ button a {
 
 h3 {
     font-family: Roboto;
+}
+
+/* project details */
+
+.date {
+    margin-top: -1rem;
+    font-family: Yeseva One;
+    text-align: center;
+    color: rgb(66, 65, 73);
+    font-size: 20px;
+}
+
+.details h4 {
+    font-family: Roboto;
+}
+
+/* contact */
+
+.form {
+    background-color: white;
+    padding: 2rem;
+    border-radius: 3px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    font-family: Roboto;
+    margin-bottom: 2.5rem;
+}
+
+label, input {
+    display: block;
+    margin-bottom: 10px; 
+}
+
+input[type="text"], input[type="email"] {
+    width: 250px;
+    height: 17px;
+}
+
+textarea {
+    width: 375px;
+    height: 100px;
+}
+
+input[type="submit"] {
+    color: white;
+    margin-top: 0.75rem;
+    padding: 0.5rem;
+    width: 65px;
+    background-color: rgb(36, 153, 237);
+    border-radius: 3px;
+    border: transparent;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    margin-left: 19.5rem;
+    margin-bottom: -0.35rem;
+}
+
+input[type="submit"]:hover {
+    background-color: rgb(28, 119, 184);
+}
+
+span {
+    color: rgb(198, 5, 5);
 }
 
 /* footer */
@@ -211,13 +302,18 @@ footer {
     font-family: Roboto;
 }
 
+.footer-li {
+    margin-bottom: 0.1rem;
+}
+
 .footer-li a:hover {
     color: rgb(189, 104, 231);
 }
 
-h4 {
+footer h4 {
     color: #ffffff;
     font-family: Roboto;
+    font-size: 17px;
 }
 
 @media screen and (min-width: 600px) {
