--- a/css/main.css
+++ b/css/main.css
@@ -185,6 +185,7 @@ figcaption a:hover {
 .card img {
     max-width: 100%;
     border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .view-btn {
