--- a/css/main.css
+++ b/css/main.css
@@ -274,12 +274,26 @@ h3 {
 }
 
 .visit-btn {
-    float: right;
     font-family: Roboto;
     font-size: 14px;
     color: white;
     text-decoration: none;
     padding: 0.7rem;
+    background-color: rgb(141, 56, 220);
+    border-radius: 3px;
+    border: transparent;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.visit-btn2 {
+    right: 0rem;
+    top: 2rem;
+    position: relative;
+    font-family: Roboto;
+    font-size: 14px;
+    color: white;
+    text-decoration: none;
+    padding: 0.6rem;
     background-color: rgb(141, 56, 220);
     border-radius: 3px;
     border: transparent;
@@ -402,6 +416,10 @@ footer h4 {
         padding-left: 5rem;
         padding-right: 5rem;
     }
+
+    .visit-btn2 {
+        margin-right: 1rem;
+    }
 }
 
 @media screen and (min-width: 950px) {
@@ -445,6 +463,7 @@ footer h4 {
 
     .container {
         padding: 2rem;
+        padding-bottom: 5rem;
     }
 
     .s2 {
@@ -453,7 +472,6 @@ footer h4 {
 
     .visit-btn {
         margin-top: -2rem;
-        float: right;
     }
 
     .skills-container {
